--- a/player.html
+++ b/player.html
@@ -2,43 +2,41 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>المشغّل</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>مشغل M3U8</title>
+
+  <!-- مكتبة Video.js -->
+  <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
   <style>
-    html,body{margin:0;height:100%;background:#000;color:#fff;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif}
-    .wrap{display:flex;flex-direction:column;height:100%}
-    video{width:100%;height:auto;background:#000;flex:1}
-    header{padding:10px 12px;background:#111;display:flex;justify-content:space-between;align-items:center}
-    a.btn{background:#1976d2;color:#fff;text-decoration:none;padding:8px 12px;border-radius:8px;font-weight:700}
+    html,body{margin:0;height:100%;background:#000;color:#fff;font-family:sans-serif}
+    #title{padding:10px;text-align:center;font-weight:bold;background:#111;color:#fff}
+    .video-js{width:100%;height:100vh;}
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <div id="title">قناة مباشرة</div>
-      <a id="openSource" class="btn" target="_blank" rel="noopener">فتح المصدر</a>
-    </header>
-    <video id="v" controls playsinline webkit-playsinline preload="metadata"></video>
-  </div>
+  <div id="title">قناة مباشرة</div>
+  <video id="my-video" class="video-js vjs-default-skin" controls preload="auto" playsinline webkit-playsinline></video>
 
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-hls@latest/dist/videojs-contrib-hls.js"></script>
   <script>
     const p = new URL(location.href).searchParams;
     const src = p.get('src');
-    const title = p.get('title') || 'قناة مباشرة';
+    const title = p.get('title') || "قناة مباشرة";
     document.getElementById('title').textContent = title;
-    document.getElementById('openSource').href = src;
 
-    const v = document.getElementById('v');
-    function start(src){
-      if (v.canPlayType('application/vnd.apple.mpegurl')) { v.src = src; v.play().catch(()=>{}); }
-      else if (window.Hls && Hls.isSupported()) {
-        const hls = new Hls({ enableWorker:true });
-        hls.loadSource(src); hls.attachMedia(v);
-        hls.on(Hls.Events.MANIFEST_PARSED, ()=> v.play().catch(()=>{}));
-      } else { v.src = src; v.play().catch(()=>{}); }
+    if(src){
+      const player = videojs('my-video', {
+        autoplay: true,
+        controls: true,
+        preload: 'auto',
+        fluid: true,
+        sources: [{
+          src: src,
+          type: 'application/x-mpegURL'
+        }]
+      });
     }
-    if (src) start(src);
   </script>
 </body>
 </html>
